# simple-whisper

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  release-plz.toml
.github/workflows/: release-plz.yml  release.yml  test-pr.yml
simple-whisper/: CHANGELOG.md  Cargo.toml  README.md
simple-whisper-cli/: Cargo.toml  README.md
simple-whisper-cli/src/: main.rs
simple-whisper-server/: Cargo.toml  README.md
simple-whisper-server/src/: main.rs
simple-whisper/src/: backend.rs  download.rs  lang.rs  language.rs  languages.rs  lib.rs  model.rs  models.rs  transcribe.rs
simple-whisper/src/burn_impl/: audio.rs  beam.rs  helper.rs  mod.rs  model.rs  token.rs  transcribe.rs  whisper.rs
simple-whisper/src/whisper_cpp_impl/: mod.rs  model.rs  transcribe.rs
