[workspace]
members = [
    "simple-whisper-cli",
    "simple-whisper-server",
    "simple-whisper"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Flavio Bizzarri <fl.bizzarri@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/newfla/simple-whisper"
keywords = ["ai, whisper, burn"]
categories = ["science","multimedia"]

[workspace.dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["json", "ws"] }
burn = { version="0.13.2", features=["wgpu", "ndarray","fusion"] }
clap = { version = "4.5.7", features = ["derive"] }
derive_builder = "0.20.0"
hf-hub = { version = "0.3.2", features = ["tokio"] }
indicatif = { version = "0.17.8", features = ["improved_unicode"] }
rodio = "0.19.0"
serde = "1.0.203"
serde_json = "1.0.117"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3.10.1"
thiserror = "1.0.61"
tokenizers = "0.19.1"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }