[package]
name = "simple-whisper-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[package.metadata.dist]
dist = true

[dependencies]
clap.workspace = true
indicatif.workspace = true
simple-whisper = { path = "../simple-whisper"}
strum.workspace = true
tokio.workspace = true
