[package]
name = "simple-whisper-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[package.metadata.dist]
dist = true

[dependencies]
clap.workspace = true
indicatif.workspace = true
simple-whisper = { path = "../simple-whisper"}
strum.workspace = true
tokio.workspace = true

[features]
default = ["burn_vulkan"]
burn_vulkan = ["simple-whisper/burn_vulkan"]
whisper_cpp_vulkan = ["simple-whisper/whisper_cpp_vulkan"]