[package]
name = "simple-whisper-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
simple-whisper = { path = "../simple-whisper"}
strum.workspace = true
tokio = { version = "1.38.0", features = ["full"] }
thiserror.workspace = true

[dev-dependencies]
futures = "0.3"
reqwest = {version = "0.12.5", features = ["json"] }
reqwest-websocket = "0.3.0"