[package]
name = "simple-whisper-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
simple-whisper = { path = "../simple-whisper"}
strum.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower-http.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
futures = "0.3"
reqwest = {version = "0.12.5", features = ["json"] }
reqwest-websocket = "0.3.0"