[package]
name = "simple-whisper"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
burn.workspace = true
derive_builder.workspace = true
hf-hub.workspace = true
rodio.workspace = true
strum.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
tokio.workspace = true
