[package]
name = "simple-whisper"
version.workspace = true
readme = "README.md"
description = "OpenAI whisper models running Burn 🔥"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cfg-if.workspace = true
burn = { version="0.13.2", features=["wgpu", "ndarray","fusion"], optional = true}
whisper-rs = { version="0.13.2", features = ["vulkan"], optional = true}
derive_builder.workspace = true
hf-hub.workspace = true
rodio.workspace = true
strum.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
tokio.workspace = true

[features]
default = ["burn_vulkan"]
burn_vulkan = ["dep:burn"]
whisper_cpp_vulkan = ["dep:whisper-rs"]
