[package]
name = "simple-whisper"
version.workspace = true
readme = "README.md"
description = "OpenAI whisper library based on whisper.cpp"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
whisper-rs = "0.14.2"
derive_builder.workspace = true
hf-hub.workspace = true
num_cpus.workspace = true
rodio.workspace = true
strum.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
tokio.workspace = true

[features]
vulkan = ["whisper-rs/vulkan"]
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]
